# kyte.io

./: .gitignore  README.md  about.markdown  contact.markdown  deploy.sh  index.html  kyte.io.cabal  projects.markdown  site.hs
_site/: about.html  archive.html  contact.html  humans.txt  index.html  projects.html
_site/css/: 1236_grid.css  720_grid.css  986_grid.css  base.css  default.css  foundation-icons.css
_site/js/: foundation.min.js  jquery-2.0.3.min.js  jquery.js  jquery.parallax.js  jquery.scrolling-parallax.js  modernizr.js  skrollr.min.js
_site/posts/: 2013-12-08-init.html
css/: base.css  default.css
js/: kyte.js
posts/: 2013-12-08-init.markdown  2013-12-09-test.markdown  2013-12-16-init.markdown  2013-12-19-arch-linux-luks-uefi.markdown  2014-07-29-Tenyks-Contexts.markdown  2014-09-18-deploying-magento.markdown
templates/: archive.html  default.html  page.html  post-item-teaser.html  post-list-teaser.html  post.html  wiki-page.html
wiki/: camping-gear.markdown  index.markdown  links.markdown  todo.markdown  wikipedia-pages-that-induce-mindfucks.markdown
