name:                kyteio
version:             0.1.0.0
homepage:            http://kyte.io
author:              Kyle Terry
maintainer:          kyle@kyleterry.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable kyte.io
  main-is: site.hs
  build-depends:       base >=4.5 && <4.7,
                       hakyll == 4.4.1.2
  default-language:    Haskell2010
